Alignment issue fixed in order confirmation page

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_static.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_static.scss
@@ -132,3 +132,6 @@
 .page-contact .modal-backdrop.in{
     display: none;
 }
+ .checkout-success-body.thanks{
+    text-align:center;
+ }
